# rpdrtools

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml
rpdrtools/: constants.py  io.py
rpdrtools/io/: __init__.py  io.py  types.py
tests/: test_io.py
tests/data/: both_breaks.txt  no_records.txt  non_report_text_break.txt  pipe_in_report_text.txt  report_text_break.txt  report_text_not_last.txt
