[tool.poetry]
name = "rpdrtools"
version = "0.1.0"
description = "Library of utility functions for handling RPDR (Research Patient Data Registry) data."
authors = ["Lindvall Lab <lindvalllab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pandas-stubs = "^1.2.0"
pip-licenses = "^3.5.3"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = {git = "https://github.com/python/mypy.git"}
types-setuptools = "^57.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
